use Integer.valueOf;