@@ -4,20 +4,19 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 @Component
-public class ServiceConfig{
+public class ServiceConfig {
 
-  @Value("${redis.server}")
-  private String redisServer="";
+	@Value("${redis.server}")
+	private String redisServer;
 
-  @Value("${redis.port}")
-  private String redisPort="";
+	@Value("${redis.port}")
+	private String redisPort;
 
-  public String getRedisServer(){
-    return redisServer;
-  }
+	public String getRedisServer() {
+		return redisServer;
+	}
 
-  public Integer getRedisPort(){
-    return new Integer( redisPort ).intValue();
-  }
-
+	public Integer getRedisPort() {
+		return Integer.valueOf(redisPort);
+	}
 }
